# DECENTRALISED-SLOT-BOOKING-SYSTEM-USING-BECKN-PROTOCOLS

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .secrets.baseline  API_CONVENTIONS.md  ARCHITECTURE.md  CONTRIBUTING.md  DATABASE.md  ENVIRONMENTS.md  INFRASTRUCTURE.md  OBSERVABILITY.md  README.md  RESUME_PROMPT.md  RUNBOOK.md  SECURITY.md  TESTING.md  docker-compose.yml  livetracker1.md  livetracker2.md  project_details.md  protocol_compliance_notes_v1.1.md
BAP/backend/: .env.example  Dockerfile  manage.py  pyproject.toml  requirements.txt
BAP/backend/bap/: asgi.py  settings.py  urls.py  wsgi.py
BAP/backend/core/: admin.py  auth.py  booking_history_service.py  cancel_service.py  confirm_service.py  conftest.py  crypto.py  events.py  init_service.py  metrics.py  models.py  onboarding_service.py  pagination.py  participant_keys.py  payment_service.py  registry_client.py  search_service.py  select_service.py  session_authz.py  status_service.py  test_booking_history.py  test_cancel.py  test_confirm.py  test_cors.py  test_customer_auth.py  test_init.py  test_metrics.py  test_participant_keys.py  test_payment.py  test_rate_limit.py  test_realtime.py  test_registry_client.py  test_search.py  test_select.py  test_session_authz.py  test_status.py  test_track.py  test_update.py  test_urls.py  tests.py  (+5 more)
BPP/backend/: .env.example  Dockerfile  manage.py  pyproject.toml  requirements.txt
BPP/backend/bpp/: asgi.py  settings.py  urls.py  wsgi.py
BPP/backend/core/: admin.py  apps.py  auth.py  beauty_adapter.py  cancel_service.py  catalog.py  catalog_cache.py  confirm_service.py  conftest.py  crypto.py  events.py  init_service.py  metrics.py  models.py  onboarding_service.py  participant_keys.py  payment_service.py  reconciliation.py  registry_client.py  search_service.py  select_service.py  signals.py  status_service.py  test_business_account.py  test_cancel.py  test_catalog.py  test_catalog_cache.py  test_confirm.py  test_init.py  test_inventory_core.py  test_inventory_core_booking.py  test_inventory_core_concurrency.py  test_inventory_core_domain_adapter.py  test_inventory_core_events.py  test_metrics.py  test_participant_keys.py  test_payment.py  test_realtime.py  test_registry_client.py  test_search.py  (+10 more)
beckn-gateway/: .dockerignore  .env.example  Dockerfile  beckn_gateway_details_v1.1.md  manage.py  pyproject.toml  requirements.txt
beckn-gateway/core/: crypto.py  onboarding_service.py  onboarding_state.py  participant_keys.py  registry_client.py  routing.py  test_participant_keys.py  test_registry_client.py  test_urls.py  tests.py  trust.py  validation.py  views.py
beckn-gateway/gateway/: asgi.py  settings.py  urls.py  wsgi.py
registry/: .env.example  Dockerfile  manage.py  pyproject.toml  registry_details_v1.1.md  requirements.txt
registry/core/: admin.py  crypto.py  metrics.py  models.py  rate_limit.py  registry_keys.py  registry_service.py  test_metrics.py  test_security.py  test_subscribe_flow.py  test_urls.py  tests.py  validation.py  views.py
registry/core/migrations/: 0001_initial.py  0002_alter_participant_participant_type.py
registry/registry/: asgi.py  settings.py  urls.py  wsgi.py
(+146 files in other folders)
