[project]
name = "beckn-gateway"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S", "DJ"]
ignore = ["DJ001"]

[tool.ruff.lint.per-file-ignores]
"**/tests.py" = ["S101", "S106"]
"**/test_*.py" = ["S101", "S106"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "gateway.settings"
python_files = ["tests.py", "test_*.py", "*_test.py"]
addopts = "--cov --cov-report=term-missing"
