[project]
name = "bpp-backend"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S", "DJ"]
ignore = ["DJ001"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "bpp.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov --cov-report=term-missing"
